Progress on the wikipedia dump importers.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,3 +23,7 @@ neo.password = "admin"
 neo.address = ${?NEO_ADDRESS}
 neo.user = ${?NEO_USER}
 neo.password = ${?NEO_PASSWORD}
+
+# James
+# ~~~~~
+james.poolsize = 8
